--- a/views/about.html
+++ b/views/about.html
@@ -94,11 +94,9 @@
         </div>
       </span>
 
-
-
-
-
-
     </div>
+  </div>
+  <div id="emailBtn">
+    <a href="mailto:kobi.vakhtang@gmail.com"><button class="hvr-border-fade">kobi.vakhtang@gmail</button></a>
   </div>
 </div>
