--- a/styles/sass/screen.scss
+++ b/styles/sass/screen.scss
@@ -158,6 +158,41 @@ nav {
     ul { padding: 0 20px; }
   }
 }
+#emailBtn {
+  background: linear-gradient(
+    rgba(255, 95, 20, 0.9),
+    rgba(168, 50, 121, 0.4)
+  ),
+  url("/styles/assets/landscape.jpg");
+  background-size: cover;
+  background-position: center center;
+  top: -70px;
+  position: relative;
+  width: 100%;
+  display: block;
+  height: 120px;
+  font-size: 1.4em;
+  padding: 30px;
+  a {
+    text-decoration: none;
+  }
+  button {
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+    border: none;
+    margin-top: 5px;
+    padding: 10px 24px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: white;
+    background-color: $primaryColor;
+    text-shadow: 1px 1px 2px rgba(150, 150, 150, 0.53);
+    &:hover {
+      background-color: rgba(0, 0, 0, 0);
+    }
+  }
+}
 .selfie {
   height: 80vh;
   min-height: 300px;
@@ -404,6 +439,8 @@ nav {
       }
     }
   }
+
+
 }
 #success {
   margin-top: 150px;
@@ -511,6 +548,23 @@ nav {
   i {
     color: $primaryColor;
   }
+}
+.hvr-border-fade {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow;
+  transition-property: box-shadow;
+  box-shadow: inset 0 0 0 4px $primaryColor, 0 0 1px transparent;
+  /* Hack to improve aliasing on mobile/tablet devices */
+}
+.hvr-border-fade:hover, .hvr-border-fade:focus, .hvr-border-fade:active {
+  box-shadow: inset 0 0 0 4px white, 0 0 1px transparent;
+  /* Hack to improve aliasing on mobile/tablet devices */
 }
 
 @media (max-width: 1060px) {
